# copia

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: CI.yml  Docs  Release.yml  ci.yml  docs.yml  release.yml
blog/: index.html
changelog/: index.html
cli/: index.html
configuration/: index.html
dev/: index.html
dev/docstrings/: index.html
dev/fetch/: index.html
dev/generators/: index.html
dev/generators_registry/: index.html
dev/ref/: index.html
dev/validator/: index.html
docs/: changelog.md  cli.md  configuration.md  dsl.md  index.md  installation.md  quickstart.md  tui.md
docs/blog/: .authors.yml
docs/configuration/: index.md  schema.json
docs/dev/: docstrings.md  fetch.md  generators.md  generators_registry.md  index.md  ref.md  validator.md
docs/generators/: address.md  city.md  country.md  date_of_birth.md  email.md  enum.md  firstname.md  future_date.md  index.md  ipv4.md  ipv6.md  lastname.md  name.md  paragraph.md  password.md  past_date.md  phone.md  ranged_float.md  ranged_int.md  ref.md  sentence.md  url.md  user_agent.md  username.md  uuid.md  word.md  zipcode.md
docs/stylesheets/: extra.css
dsl/: index.html
generators/: index.html
generators/address/: index.html
generators/city/: index.html
generators/country/: index.html
generators/date_of_birth/: index.html
generators/email/: index.html
generators/enum/: index.html
generators/fetch/: index.html
generators/firstname/: index.html
generators/future_date/: index.html
generators/ipv4/: index.html
generators/ipv6/: index.html
generators/lastname/: index.html
generators/name/: index.html
hooks/: changelog_hook.py  dsl_hook.py  generators_hook.py
installation/: index.html
quickstart/: index.html
scripts/: config_schema.py
search/: search_index.json
tests/: test_discover.py  test_generators_discover.py
tui/: index.html
(+141 files in other folders)
