[project]
name = "copia"
dynamic = ["version"]
description = "Interactive TUI database seeder"
readme = "README.md"
authors = [
    { name = "gitmobkab", email = "richmondaurel77@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "faker>=40.8.0",
    "lark>=1.3.1",
    "pydantic>=2.12.5",
    "pymysql>=1.1.2",
    "sqlalchemy>=2.0.48",
    "textual>=8.2.1",
    "typer>=0.24.1",
]

[project.scripts]
copia = "copia.cli.app:app"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/copia"]
include = [
    "src/copia/example.copia.toml",
    "src/copia/data/*"
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
    "mkdocs-material>=9.7.6",
    "pillow>=12.2.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.6",
    "textual-dev>=1.8.0",
]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["F401", "F403"]